rust-cef-derive/tests/cef-inherit-negative.rs

#[macro_use]
extern crate rust_cef_derive;

#[cef_inherit]
union OnUnion{}

#[cef_inherit()]
struct EmptyInherit{}

#[cef_inherit()]
struct EmptyInherit2{}

fn main() {

}